# wastledb

./: .gitignore  2-way-encryption.txt  Cargo.toml  README.md
keys/: private.pem  public.pem
src/: inter.rs  login-system.rs  main.rs  tui.rs
src/additions/: create_stuff.rs  unavailable.rs
src/connection/: tcp.rs
src/management/: main.rs  sql_json.rs
