[package]
name = "wastle_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
sha3 = "0.10.6"
encoding_rs = "0.8.31"
uuid = { version = "1.2.1", features = ["v4"]}
sqlparser = "0.26.0"
